# uv-fastapi

./: .dockerignore  .env  .gitignore  Makefile  WhisperServiceAPI.db  pyproject.toml
app/: main.py  models.py
app/api/: deps.py  main.py  router.py
app/api/models/: api_response_model.py  whisper_task_request.py
app/api/routers/: health_check.py  whisper_tasks.py
app/api/routes/: login.py  private.py
app/core/: config.py  db.py
app/database/: database_manager.py
app/database/models/: task_models.py
app/http_client/: async_http_client.py  http_exception.py
app/model_pool/: async_model_pool.py
app/processors/: task_processor.py
app/services/: callback_service.py  whisper_service.py
app/utils/: file_utils.py  logging_utils.py
scripts/: kill_for_remote
