[project]
name = "uv-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.115.8",
    "faster-whisper>=1.1.1",
    "filetype>=1.2.0",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "openai-whisper>=20240930",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.4",
    "pydantic-settings>=2.7.1",
    "pydub>=0.25.1",
    "sqlmodel>=0.0.22",
    "torch>=2.2.2",
]

[tool.uv]
constraint-dependencies = ["llvm>0.43.0"]
